<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#18637A"
    android:backgroundTint="#ABD2E4"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#3145C3"
        android:backgroundTint="#00FFFFFF"
        android:rotationX="-8"

        android:text="@string/Name"
        app:layout_constraintBottom_toTopOf="@+id/etnome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00E6E610"
        android:text="@string/Address"
        app:layout_constraintBottom_toTopOf="@+id/etendereco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etnome" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00E6E610"
        android:text="@string/Company"
        app:layout_constraintBottom_toTopOf="@+id/etempresa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etendereco"
        app:layout_constraintVertical_bias="0.413" />

    <EditText
        android:id="@+id/etnome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="#E6E610"
        android:backgroundTint="#4C7CDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Enter"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etendereco"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#E6E610"
        android:backgroundTint="#4C7CDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/EnterAd"
        app:layout_constraintBottom_toTopOf="@+id/etempresa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etnome"
        app:layout_constraintVertical_bias="0.479" />

    <EditText
        android:id="@+id/etempresa"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="40dp"
        android:background="#E6E610"
        android:backgroundTint="#4C7CDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/EnterCo"
        app:layout_constraintBottom_toTopOf="@+id/btinserir"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btinserir"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:layout_marginBottom="64dp"
        android:background="#0A5E54"
        android:text="@string/save"
        app:iconTint="#103575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btlistar"
        android:layout_width="160dp"
        android:layout_height="41dp"

        android:text="@string/list"
        app:iconTint="#D50606"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btinserir"
        app:layout_constraintVertical_bias="0.875" />

</androidx.constraintlayout.widget.ConstraintLayout>